fixed horizontal shift with right arrow, creating white gap right of page (temp fix)

--- a/index.css
+++ b/index.css
@@ -2,10 +2,13 @@
 
 * {
     font-family: 'Poppins', sans-serif;
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    overflow-x: hidden;
+  }
 
 .custom-navbar {
     height: 80px; /* Set the desired height (adjust as needed) */
@@ -19,8 +22,6 @@
 
 .dark-overlay {
     position: absolute;
-    /* width: 100%;
-    height: 100%; */
     background-color: rgba(0, 0, 0, 0.5)
   }
 
